Add generic provider content refs
